fix(chat-css): Rework message layout and add turn spacing
- Introduce a `--turn` CSS variable and `.turn` class to add vertical space
  between conversational turns.
- Rework float/clear logic to prevent layout breaks for messages that contain
  code, images, or only formatted text.
- Add specific CSS rules to improve the alignment of image batches.
- Adjust label indentation for better message alignment.
- Add client-side CSS to hide empty paragraph tags.
- Add a Javascript-based `beta_test` option to foist it on our unwitting users.

--- a/webchat/static/allychat.css
+++ b/webchat/static/allychat.css
@@ -187,10 +187,12 @@ a:hover {
 
 :root {
 	--pad: 0.5rem;
+	--turn: 0.75rem;  /* 0.375rem */
 	--radius: 0.375rem;
 	--font-size: 16px;
 	--font-size-code: 12px;
-	--label-gap: 0.75rem;
+	--label-indent: 1rem;
+	--label-gap: 0.5rem;
 	font-size: var(--font-size);
 }
 
